syntax = "proto3";
package proto;
option go_package="../serviceImpl";

message StartYaMaPipeLineRequest{
  int64 userId = 1;
  string userName = 2;
  string repository = 3;
  string branch = 4;
}

message StartYaMaPipeLineResponse{
  bool success = 1;
}

message PassMergeRequestCodeReviewRequest{
  int64 actionId = 1;
  int64 stageId = 2;
  int64 stepId = 3;
}
message PassMergeRequestCodeReviewResponse{
  bool success = 1;
}

service YaMaPipeLineService{
  rpc StartYaMaPipeLine(StartYaMaPipeLineRequest) returns (StartYaMaPipeLineResponse) {}
  rpc PassMergeRequestCodeReview(PassMergeRequestCodeReviewRequest) returns (PassMergeRequestCodeReviewResponse) {}
}
